[metadata]
name = modernmt
version = 1.0.3
author = ModernMT
author_email = info@modernmt.com
description = ModernMT API wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/modernmt/modernmt-python
project_urls =
    Bug Tracker = https://github.com/modernmt/modernmt-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3
install_requires =
    requests

[options.packages.find]
where = src 
